test_compiler/errors/e02.gm
Procedure foo(G: Graph)
{
  Node(G) y;
  G.X = 1;
  y.X = 1;
}
